# ManDB

./: .gitignore  README.md
cpp-database/: CMakeLists.txt  README.md
cpp-database/include/database/: types.h
cpp-database/src/: main.cpp
cpp-database/src/core/: database.cpp  database.h  query.cpp  query.h  table.cpp  table.h
cpp-database/src/parser/: sql_parser.cpp  sql_parser.h
cpp-database/src/storage/: crc32.cpp  crc32.h  log_manager.cpp  log_manager.h  page_cache.cpp  page_cache.h  storage_engine.cpp  storage_engine.h
cpp-database/tests/: CMakeLists.txt  core_tests.cpp  database_tests.cpp  parser_tests.cpp  sql_parser_tests.cpp  storage_engine_tests.cpp
